Fix persistent native update policies
